--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,16 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+buildscript {
+    dependencies {
+        classpath 'com.jakewharton:butterknife-gradle-plugin:10.2.3'
+    }
+}
 plugins {
     id 'com.android.application' version '7.2.2' apply false
     id 'com.android.library' version '7.2.2' apply false
 }
 
+
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+apply plugin: 'com.jakewharton.butterknife'
