--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,17 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.5.0'
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    //retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
+    implementation 'com.squareup.okhttp3:okhttp:3.14.6'
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.9.0'
+    //GSON
+    implementation 'com.google.code.gson:gson:2.9.1'
+    //implementation'com.squareup.retrofit2:converter-gson'
+    //Glide 4
+    implementation 'com.github.bumptech.glide:glide:4.13.2'
+    // Skip this if you don't want to use integration libraries or configure Glide.
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.13.2'
     //circle image view
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.5.1'
