--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,7 +43,7 @@ dependencies {
     implementation 'com.squareup.okhttp3:logging-interceptor:4.9.0'
     //GSON
     implementation 'com.google.code.gson:gson:2.9.1'
-    //implementation'com.squareup.retrofit2:converter-gson'
+    implementation"com.squareup.retrofit2:converter-gson:2.9.0"
     //Glide 4
     implementation 'com.github.bumptech.glide:glide:4.13.2'
     // Skip this if you don't want to use integration libraries or configure Glide.
