--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,7 @@ android {
 dependencies {
 
     implementation 'com.jakewharton:butterknife:10.2.3'
+    implementation 'com.github.bumptech.glide:glide:4.13.2'
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.3'
     implementation 'androidx.appcompat:appcompat:1.5.0'
     implementation 'com.google.android.material:material:1.6.1'
@@ -46,6 +47,7 @@ dependencies {
     implementation"com.squareup.retrofit2:converter-gson:2.9.0"
     //Glide 4
     implementation 'com.github.bumptech.glide:glide:4.13.2'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.13.2'
     // Skip this if you don't want to use integration libraries or configure Glide.
     annotationProcessor 'com.github.bumptech.glide:compiler:4.13.2'
     //circle image view
