--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     dependencies {
+        classpath "io.realm:realm-gradle-plugin:10.11.1"
         classpath 'com.jakewharton:butterknife-gradle-plugin:10.2.3'
     }
     repositories {
